--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -49,21 +49,36 @@ section button {
     margin-bottom: 20px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     font-size: 16px;
+    border: 2px purple solid;
+    border-radius: 5px;
+    background-color: azure;
+    color: purple;
+}
+
+section button:hover {
+    background-color: purple;
+    border-color: azure;
+    color: azure;
 }
 
 #stats {
     display: none;
     flex-direction: column;
     flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    background-color: white;
-    border: 1px black solid;
+    /* background-color: white;
+    border: 1px black solid; */
     border-radius: 10px;
-    padding: 10px;
+    /* padding: 10px; */
     margin-top: 100px;
-    margin-left: 350px;
-    margin-right: 350px;
+    /* width: 50%; */
+    /*margin-left: 350px;
+    margin-right: 350px; */
 }
 
 #stats span {
@@ -78,13 +93,17 @@ section button {
 
 #stats button {
     margin-top: 10px;
-    padding: 10px;
+    padding: 5px;
     border: 2px purple solid;
-    border-radius: 10px;
+    border-radius: 5px;
     font-weight: bolder;
 }
 
-div {
+#stats button:hover {
+    border-color: azure;
+}
+
+#answer-div {
     display: none;
     margin: 0;
     border-top: 1px black solid;
@@ -92,4 +111,35 @@ div {
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
+}
+
+#highscores {
+    display: none;
+}
+
+#highscores div {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px black solid; */
+    margin: 10px;
+    padding: 20px;
+    text-align: left;
+}
+
+#highscores div span {
+    padding: 10px;
+    background-color: lightgray;
+}
+
+footer {
+    position: absolute;
+    text-align: center;
+    font-size: 12px;
+    padding: 25px;
+    background: white;
+    width: 100%;
+    bottom: 0;
 }
